2005-10-18  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added HP ScanJet 7650 and
	  UMAX Astra 2500.
	* doc/descriptions-external/brother2.desc: MFC-210C is reported to
	  work.
	* NEWS: Created entry for sane-backends 1.0.17.

2005-10-17  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* acinclude.m4 configure: Fixed check for libpthread functions.
	* tools/hotplug/libsane.usermap: Added Brother MFC 210C (from
	  Benjamin Mirza <bm1607@yahoo.de>). 
	* doc/descriptions-external/epkowa.desc: Updated for iscan 1.17.0
	  (patch from Olaf Meeuwissen <olaf@member.fsf.org>). Bug #302183.

2005-10-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS: Marked Michael Herder as not active. No activity since
	  some time, most email addresses bounce, no response to
	  pings. Changed contact address to the only one that doesn't
	  directly bounce.
	* backend/artec_eplus48u.conf: Added support for UMAX AstraSlim
	  1200 SE (from Harq al-Ada <nadaban.bogdan at gmail.com>).
	* doc/descriptions/artec_eplus48u.desc: UMAX AstraSlim
	  1200 SE is supported. Backend is unmaintained.
	* doc/descriptions/unsupported.desc: Added HP ScanJet
	  4850C. Removed UMAX AstraSlim 1200 SE.
	* backend/gt68xx.c backend/gt68xx_generic.c
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES: Minor
	  modifications to sheet-fed scanner support.
	* backend/mustek_usb2.c backend/mustek_usb2.h
	  backend/mustek_usb2_asic.c backend/mustek_usb2_asic.h
	  backend/mustek_usb2_high.c backend/mustek_usb2_high.h
	  backend/mustek_usb2_reflective.c backend/mustek_usb2_transparent.c
	  doc/descriptions/mustek_usb2.desc
	  doc/mustek_usb2/mustek_usb2.CHANGES:
	  Removed typedefs for DWORD, WORD and so on. Used int, unsigned
	  short, ... directly in the code. 
	* AUTHORS configure configure.in backend/Makefile.in
	  backend/dll.conf backend/lexmark-x1100.c backend/lexmark.c
	  backend/lexmark.conf backend/lexmark.h doc/Makefile.in