@@ -1,3 +1,8 @@
+2005-10-20  Oliver Schwartz <Oliver.Schwartz@gmx.de>
+
+	* backend/snapscan-scsi.c: Fixes for 16 bit 
+	  quality calibration by Simon Munton
+
 2005-10-18  Henning Meier-Geinitz <henning@meier-geinitz.de>
 
 	* doc/descriptions/unsupported.desc: Added HP ScanJet 7650 and
